added isbn test frameworks

--- a/src/test/cpp/regression/makefile
+++ b/src/test/cpp/regression/makefile
@@ -33,6 +33,7 @@ DEBUG_PLUGIN_EXTERNAL?=no
 RUN_HEX=no
 WITH_RISCV_REF=yes
 CUSTOM_SIMD_ADD?=no
+CUSTOM_SIMD_ISBN?=no
 CUSTOM_CSR?=no
 DHRYSTONE=yes
 FREERTOS?=no
@@ -240,6 +241,10 @@ endif
 
 ifeq ($(CUSTOM_SIMD_ADD),yes)
 	ADDCFLAGS += -CFLAGS -DCUSTOM_SIMD_ADD
+endif
+
+ifeq ($(CUSTOM_SIMD_ISBN),yes)
+	ADDCFLAGS += -CFLAGS -DCUSTOM_SIMD_ISBN
 endif
 
 ifeq ($(CUSTOM_CSR),yes)
